--- a/app/frontend/src/pages/login_page/style.css
+++ b/app/frontend/src/pages/login_page/style.css
@@ -23,7 +23,7 @@ body {
     max-width: 350px;
     background: #fff;
     border-radius: 8px;
-    padding: 28px 18px 22px 18px;
+    padding: 28px 18px 22px;
     box-shadow: 0 8px 18px rgba(0, 0, 0, 0.13);
     margin: 0 auto;
 }
@@ -50,7 +50,7 @@ body {
     background: #F8F8FB;
     border: 1px solid #DADAF2;
     border-radius: 5px;
-    margin: 12px 0 10px 0;
+    margin: 12px 0 10px;
     text-decoration: none;
     color: #171645;
     font-size: 13px;
@@ -105,7 +105,7 @@ form .input_box select {
     outline: none;
     background: #F8F8FB;
     font-size: 13px;
-    padding: 0px 8px;
+    padding: 0 8px;
     margin-bottom: 12px;
     transition: 0.2s ease;
 }
